--- a/bundles/extensions/metrics/pom.xml
+++ b/bundles/extensions/metrics/pom.xml
@@ -69,6 +69,7 @@
                         <Import-Package>
                         sun.misc.*;resolution:=optional,*
                         </Import-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
                         <Embed-Dependency>asm-debug-all, metrics-core, yamlbeans
                         </Embed-Dependency>
                     </instructions>
